@@ -4,6 +4,7 @@
   Lazy_exact_nt<ET2>
 - Binary_operator_result<T1, T2> : new tool to get the type of mixed
   operators.
+- Binary_operator_result.h : move to Number_types.
 
 1 August 2005 Sylvain Pion
 - Fix for last change.
